# logintc-c

./: CMakeLists.txt  README.md  configure.ac
examples/: authentication.c
src/: Makefile.am  logintc.c  response.c  session.c
src/logintc/: error.c  error.h  globals.h  logintc.h  response.h  session.h
